# cozy_pipeline

./: .env  .gitignore  README.md  pyproject.toml
data/: input.csv  results.csv  tune.csv
src/llm_evaluator/: __main__.py  config.py
src/llm_evaluator/domain/: models.py
src/llm_evaluator/infrastructure/: ollama.py  tuner.py
src/llm_evaluator/interface/: cli.py
